# embeddedAndRTTP

./: LoRaGateway.cpp  LoRaNode.cpp  README.md
RP2040-src/: CMakeLists.txt
RP2040-src/aplication/: CMakeLists.txt
RP2040-src/aplication/LoRaSender/: CMakeLists.txt
RP2040-src/aplications/: CMakeLists.txt
RP2040-src/aplications/LoRaGateway/: CMakeLists.txt  LoRaGateway.cpp
RP2040-src/aplications/LoRaNode/: CMakeLists.txt  LoRaNode.cpp
RP2040-src/lib/FreeRTOS-Kernel/include/: FreeRTOSConfig.h
RP2040-src/src/: CMakeLists.txt  LoRa-RP2040.cpp  LoRa-RP2040.h  bmp280_i2c.cpp  bmp280_i2c.h  ssd1306_font.h  ssd1306_i2c.c  ssd1306_i2c.h
